# encapsia-cli

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  WALKTHROUGH.html  pyproject.toml  requirements.txt
encapsia_cli/: __init__.py  add_superuser.py  archive.py  completion.py  config.py  database.py  dbctl.py  encapsia.py  expire_token.py  fixtures.py  help.py  httpie.py  lib.py  plugininfo.py  plugins.py  plugins_maker.py  run.py  s3.py  schedule.py  shell.py  system_user.py  task.py  token.py  users.py  version.py  whoami.py
tests/: plugins.sh  s3_plugins.toml  test_plugininfo.py  test_plugins.py
walkthrough_tests/: all.sh  config.sh  database.sh  example.toml  example_data.json  example_data.txt  example_plugins.toml  fixtures.sh  help.sh  lib.sh  plugins.sh  run.sh  token.sh  treaties.csv  users.sh  version.sh
walkthrough_tests/test_plugin/: plugin.toml
walkthrough_tests/test_plugin/schedules/: test_schedule.toml  test_schedule_with_system_user.toml
walkthrough_tests/test_plugin/tasks/: test_module.py
walkthrough_tests/test_plugin/views/: permissions.sql  test_views.sql
walkthrough_tests/test_plugin/wheels/: requirements.txt
