[tool.poetry]
name = "encapsia-cli"
version = "0.4.1"
description = "Client CLI for talking to an Encapsia system."
readme = "README.md"
authors = ["Timothy Corbett-Clark <timothy.corbettclark@gmail.com>"]
license = "MIT"
keywords = ["encapsia", "eSource", "EDC", "Clinical Trials"]
homepage = "https://github.com/tcorbettclark/encapsia-cli"

[tool.poetry.scripts]
encapsia = "encapsia_cli.encapsia:encapsia"

[tool.poetry.dependencies]
python = "^3.6"
requests = {extras = ["security", "socks"], version = "^2.24.0"}
click = "^7.0"
toml = "^0.10.0"
click-completion = "^0.5.0"
click-shell = "^2.0"
tabulate = "^0.8.3"
httpie = "^2.2"
# encapsia-api = {path = "../encapsia-api/"} # Only needed during development against unreleased versions of encapsia-api
encapsia-api = "^0.2.6"
http-prompt = {version = "^1.0",optional = true}
boto3 = "^1.14.29"
semver = "^2.10.2"
arrow = "^0.16.0"

[tool.poetry.extras]
httpie-shell = ["http-prompt"]

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1",allow-prereleases = true}
isort = "^5.5"
flake8 = "^3.7"
ansi2html = "^1.5"
mypy = "^0.782"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
