[tool.poetry]
name = "encapsia-cli"
version = "0.5.9"
description = "Client CLI for talking to an Encapsia system."
readme = "README.md"
authors = ["Timothy Corbett-Clark <timothy.corbettclark@gmail.com>"]
maintainers = ["Petre Mierluțiu <pmierlutiu@cmedtechnology.com>"]
license = "MIT"
keywords = ["encapsia", "eSource", "EDC", "Clinical Trials"]
homepage = "https://github.com/Encapsia/encapsia-cli"

[tool.poetry.scripts]
encapsia = "encapsia_cli.encapsia:encapsia"

[tool.poetry.dependencies]
python = "^3.8"
requests = {version = "^2.31.0", extras = ["security", "socks"]}
click = "^7.0"
toml = "^0.10.2"
click-completion = "^0.5.0"
click-shell = "^2.0"
tabulate = "^0.9.0"
httpie = "^3.1.0"
encapsia-api = "^0.4.5"
# encapsia-api = {path = "../encapsia-api/"} # Only needed during development against unreleased versions of encapsia-api
http-prompt = {version = "^1.0",optional = true}
boto3 = "^1.34.28"
semver = "^3.0.2"
arrow = "^1.3.0"
shellingham = "^1.5.4"

[tool.poetry.extras]
httpie-shell = ["http-prompt"]

[tool.poetry.dev-dependencies]
isort = "^5.5"
flake8 = "^3.7"
ansi2html = "^1.5"
mypy = "^0.782"
pytest = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^21.12b0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target_version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
lines_after_imports = 2

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
